--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "axios": "0.18.1",
     "core-js": "3.6.5",
     "echarts": "^5.3.2",
@@ -23,6 +27,7 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
+    "vue-count-to": "^1.0.13",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
